docs/user/1.0/_sources/cli/apptainer_remote_add.rst.txt
.. _apptainer_remote_add:

apptainer remote add
--------------------

Add a new apptainer remote endpoint

Synopsis
~~~~~~~~



  The 'remote add' command allows you to add a new remote endpoint to be
  be used for apptainer remote services. Authentication with a newly created
  endpoint will occur automatically.

::

  apptainer remote add [add options...] <remote_name> <remote_URI>

Examples
~~~~~~~~

::


    $ apptainer remote add ExampleCloud cloud.example.com

Options
~~~~~~~

::

  -g, --global             edit the list of globally configured remote endpoints
  -h, --help               help for add
      --no-login           skip automatic login step
      --tokenfile string   path to the file holding auth token for login (remote endpoints only)

SEE ALSO
~~~~~~~~

* :ref:`apptainer remote <apptainer_remote>` 	 - Manage apptainer remote endpoints, keyservers and OCI/Docker registry credentials

*Auto generated by spf13/cobra on 16-Feb-2023*
