docs/user/1.3/_sources/cli/apptainer_remote_add.rst.txt
.. _apptainer_remote_add:

apptainer remote add
--------------------

Add a new apptainer remote endpoint

Synopsis
~~~~~~~~



  The 'remote add' command allows you to add a new remote endpoint to be
  be used for apptainer remote services. Authentication with a newly created
  endpoint will occur automatically.

::

  apptainer remote add [add options...] <remote_name> <remote_URI>

Examples
~~~~~~~~

::


    $ apptainer remote add ExampleCloud cloud.example.com

Options
~~~~~~~

::

  -g, --global             edit the list of globally configured remote endpoints
  -h, --help               help for add
  -i, --insecure           allow connection to an insecure http remote.
  -n, --no-default         do not designate the newly-added remote endpoint as the default
      --no-login           skip automatic login step
      --tokenfile string   path to the file holding auth token for login (remote endpoints only)

SEE ALSO
~~~~~~~~

* :ref:`apptainer remote <apptainer_remote>` 	 - Manage apptainer remote endpoints

*Auto generated by spf13/cobra on 28-May-2024*
